--- a/webAPI/appsettings.json
+++ b/webAPI/appsettings.json
@@ -7,7 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "mssql": "Server=192.168.1.103;Database=WebAPI;User ID=sa;Password=t0955787053S;TrustServerCertificate=true",
+    "mssql": "Server=foyserver.duckdns.org;Database=WebAPI;User ID=sa;Password=t0955787053S;TrustServerCertificate=true",
     "redis": ""
+  },
+  "EmailCommectStrings": {
+    "Auth_Code": "zffn houc hgdi leag",
+    "Smtp_HostName": "smtp.gmail.com",
+    "From_Mail": "s225002731@gmail.com",
+    "SSL": true,
+    "Port": 465,
+    "from": "開發用系統"
+  },
+  "Redis_Setting": {
+    "Client_From": "foyserver.duckdns.org",
+    "Pwd": null,
+    "Port":6379
   }
 }
